# vite-plugin-skeleton-colors

./: .bazelrc  .gitignore  .gitlab-ci.yml  .npmrc  BUILD.bazel  LICENSE  MODULE.bazel  flake.nix  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
src/: constants.ts  culori.d.ts  generator.ts  index.ts  oklch.ts  parser.ts  plugin.ts  types.ts
tests/: generator.test.ts  oklch.test.ts  parser.test.ts
