# Consolidation Assessment:
# Evaluated for merge with @tummycrypt/vite-plugin-a11y (2026-02-09).
# Decision: KEEP SEPARATE.
#   - Zero shared utility functions between the two plugins.
#   - vite-plugin-skeleton-colors: CSS utility generation for Skeleton v4 color pairings
#     using culori (OKLCH color space). Operates via Vite resolveId()/load() virtual modules.
#   - vite-plugin-a11y: WCAG validation (sRGB contrast, ARIA, keyboard nav) using
#     magic-string + svelte/compiler. Operates via Vite transform() hook on .svelte files.
#   - Different runtime deps (culori vs magic-string), different peer deps (none vs svelte).
#   - Shared boilerplate is <10 lines (Plugin type import, fs/path, resolveConfig pattern).
#   - Merging would create unnecessary coupling between unrelated concerns.

"""
BUILD.bazel for @tummycrypt/vite-plugin-skeleton-colors.

Dual-mode build: works with both pnpm (standalone) and Bazel (CI/production).
  Standalone: cd packages/vite-plugin-skeleton-colors && pnpm build
  Monorepo:   bazel build //packages/vite-plugin-skeleton-colors/...
"""

load("@aspect_rules_js//js:defs.bzl", "js_library", "js_test")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

# =============================================================================
# npm link - makes node_modules available for this package
# =============================================================================

npm_link_all_packages(name = "node_modules")


# =============================================================================
# TypeScript compilation
#
# Compiles all .ts sources under src/ to ESM JavaScript with declarations.
# Mirrors the standalone `tsc` build from package.json "build" script.
#
# Note: src/culori.d.ts provides ambient type declarations for the culori
# library and is included in the glob automatically.
# =============================================================================

ts_project(
    name = "vite_plugin_skeleton_colors",
    srcs = glob(
        ["src/**/*.ts"],
        exclude = [
            "src/**/*.test.ts",
            "src/**/*.spec.ts",
        ],
    ),
    declaration = True,
    declaration_map = True,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        ":node_modules",
        "//packages:tsconfig_base",
        # Runtime dependencies
        ":node_modules/culori",
        # Peer dependencies (resolved at build time via devDependencies)
        ":node_modules/vite",
        # Type definitions
        ":node_modules/@types/node",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# npm package target
#
# Packages the compiled output into a publishable npm package structure.
# =============================================================================

npm_package(
    name = "pkg",
    srcs = [
        "package.json",
        "LICENSE",
        ":vite_plugin_skeleton_colors",
    ],
    package = "@tummycrypt/vite-plugin-skeleton-colors",
    version = "0.1.0",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Test targets
#
# Compiles and runs vitest test files from the tests/ directory.
# Uses vitest in run mode (no watch) for hermetic CI execution.
# =============================================================================

ts_project(
    name = "vite_plugin_skeleton_colors_test_lib",
    srcs = glob(["tests/**/*.test.ts"]),
    declaration = False,
    source_map = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        ":vite_plugin_skeleton_colors",
        ":node_modules",
        ":node_modules/vitest",
    ],
)

js_test(
    name = "test",
    data = [
        ":vite_plugin_skeleton_colors",
        ":vite_plugin_skeleton_colors_test_lib",
        ":node_modules",
        ":node_modules/vitest",
        "vitest.config.ts",
    ],
    entry_point = "//:vitest_bin",
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "$(rootpath vitest.config.ts)",
    ],
    log_level = "info",
    visibility = ["//visibility:public"],
)

# =============================================================================
# Typecheck-only target (no emit)
#
# Useful for CI pipelines that want fast type validation without full build.
# =============================================================================

ts_project(
    name = "typecheck",
    srcs = glob(["src/**/*.ts"]),
    declaration = False,
    no_emit = True,
    tsconfig = ":tsconfig.json",
    transpiler = "tsc",
    deps = [
        ":node_modules",
        "//packages:tsconfig_base",
        ":node_modules/culori",
        ":node_modules/vite",
        ":node_modules/@types/node",
    ],
    visibility = ["//visibility:public"],
)

# =============================================================================
# Exported files for downstream consumers
# =============================================================================

exports_files(
    [
        "package.json",
        "tsconfig.json",
        "vitest.config.ts",
    ],
    visibility = ["//visibility:public"],
)
