"""
MODULE.bazel for standalone Bazel consumption of @tummycrypt/vite-plugin-skeleton-colors.

Usage from external repo:
  bazel_dep(name = "tummycrypt_vite_plugin_skeleton_colors", version = "0.1.0")

For monorepo development, this is overridden by local_path_override in the root MODULE.bazel.
"""

module(
    name = "tummycrypt_vite_plugin_skeleton_colors",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_rules_js", version = "2.9.1")
bazel_dep(name = "aspect_rules_ts", version = "3.8.4")
bazel_dep(name = "rules_nodejs", version = "6.3.0")
